# beangrow-streamlit

./: .gitignore  pyproject.toml  requirements.txt  setup.py
beangrow/: compute_returns.py  compute_returns_beam.py  config.py  config_pb2.py  configure.py  download_prices.py  download_prices_from_file.py  investments.py  ledger.py  reports.py  returns.py  streamlit_app.py  streamlit_helpers.py
src/beangrow/: configure.py  download_prices.py  ledger.py  reportdata.py  reports.py
src/streamlit_app/: 01_🏠_Returns.py  beangrow_streamlit.py
src/streamlit_app/pages/: 05_📝_Config.py
streamlit_app/: 01_Main.py  01_🏠_Main.py  01_🏠_Returns.py  beangrow-streamlit.py
streamlit_app/pages/: 02_Cash_Flow.py  02_💸_Cash_Flows.py  03_Investments.py  03_📈_Investments_By_Account.py  04_Investments_By_Type.py  04_📉_Investments_By_Signature.py  05_📝_Config.py  06_🚀_Prices.py
