[project]
name = "beangrow-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beancount>=2.3.6,<3.0",
    "matplotlib>=3.10.0",
    "pandas<2.0.0",
    "plotly>=5.24.1",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "streamlit>=1.41.1",
    "streamlit-extras>=0.5.0",
    "protobuf<4.0.0",
    "numpy<2.0.0"
]

[project.scripts]
beangrow-configure = "beangrow.configure:main"
beangrow-returns = "beangrow.compute_returns:main"
beangrow-streamlit = "streamlit_app.beangrow_streamlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beangrow", "src/streamlit_app"]